force-app/main/default/objects/SFBG_Question__c/SFBG_Question__c.object-meta.xml
<CustomObject>
    <description>Represents a Question record. Part of the Dynamic Questionnaire asset created by Macjules Sevilla.</description>
    <label>Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>