force-app/main/default/objects/SFBG_Question__c/fields/SFBG_CallOutcome__c.field-meta.xml
<CustomField>
    <fullName>SFBG_CallOutcome__c</fullName>
    <description>It hold the call outcome message.</description>
    <label>Call Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>