force-app/main/default/objects/SFBG_Question__c/fields/SFBG_CaseTargetField__c.field-meta.xml
<CustomField>
    <fullName>SFBG_CaseTargetField__c</fullName>
    <description>Hold the value that is target with Case Object</description>
    <label>Case Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>