force-app/main/default/objects/SFBG_Question__c/fields/SFBG_HelpText__c.field-meta.xml
<CustomField>
    <fullName>SFBG_HelpText__c</fullName>
    <description>Help text to display in the custom rendering engine.</description>
    <inlineHelpText>Fill this out only if you want a help text to show up in the questionnaire form.</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>