force-app/main/default/objects/SFBG_Question__c/fields/SFBG_InformationCategory__c.field-meta.xml
<CustomField>
    <fullName>SFBG_InformationCategory__c</fullName>
    <description>Information to be displayed is of the following category</description>
    <label>Information Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>