force-app/main/default/objects/SFBG_Question__c/fields/SFBG_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SFBG_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the rendering engine will display the question.</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>