force-app/main/default/objects/SFBG_Question__c/fields/SFBG_IsQuestionnaireOfflineFormula__c.field-meta.xml
<CustomField>
    <fullName>SFBG_IsQuestionnaireOfflineFormula__c</fullName>
    <description>Formula field showing the Is Available Offline status of the parent Questionnaire. Use this in configuring the briefcase.</description>
    <formula>SFBG_QuestionnaireId__r.SFBG_IsAvailableOffline__c</formula>
    <label>Is Questionnaire Available Offline?</label>
    <type>Checkbox</type>
</CustomField>