force-app/main/default/objects/SFBG_Question__c/fields/SFBG_Question__c.field-meta.xml
<CustomField>
    <fullName>SFBG_Question__c</fullName>
    <description>The question to display in the custom rendering engine.</description>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>