force-app/main/default/objects/SFBG_Question__c/fields/SFBG_QuestionnaireId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_QuestionnaireId__c</fullName>
    <description>The questionnaire record where this question record is related.</description>
    <label>Questionnaire</label>
    <referenceTo>SFBG_Questionnaire__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>SFBG_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>