force-app/main/default/objects/SFBG_Question__c/fields/SFBG_QuestionToDisplayId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_QuestionToDisplayId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this to open the next question if the Question Type is Textbox.</description>
    <label>Question To Display</label>
    <referenceTo>SFBG_Question__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>QuestionsToDisplayFromQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>