force-app/main/default/objects/SFBG_Question__c/fields/SPEN_CallOutcome__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallOutcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_CategoryOutcome</valueSetName>
    </valueSet>
</CustomField>