force-app/main/default/objects/SFBG_Question__c/recordTypes/Checkbox.recordType-meta.xml
<RecordType>
    <fullName>Checkbox</fullName>
    <active>true</active>
    <label>Checkbox</label>
</RecordType>