force-app/main/default/objects/SFBG_Question__c/recordTypes/Information.recordType-meta.xml
<RecordType>
    <fullName>Information</fullName>
    <active>true</active>
    <label>Information</label>
</RecordType>