force-app/main/default/objects/SFBG_Question__c/recordTypes/Radio.recordType-meta.xml
<RecordType>
    <fullName>Radio</fullName>
    <active>true</active>
    <label>Radio</label>
</RecordType>