force-app/main/default/objects/SFBG_Question__c/recordTypes/Textbox.recordType-meta.xml
<RecordType>
    <fullName>Textbox</fullName>
    <active>true</active>
    <label>Textbox</label>
</RecordType>