force-app/main/default/objects/SFBG_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFBG_QuestionnaireId__c</columns>
    <columns>SFBG_Question__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SFBG_IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>